# TargetGraph

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SKILLS.md  test_extractor.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  llm.py  nodes.py  orchestrator.py  state.py
backend/app/api/v1/: dependencies.py  email_verification.py  jobs.py  profiles.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  database.py
backend/app/models/: __init__.py  enums.py
backend/app/models/schemas/: __init__.py  hunter.py  job.py  outreach.py  profile.py
backend/app/models/sql/: __init__.py  job_posting.py  profile.py
backend/app/repositories/: __init__.py  base.py  job_repository.py  profile_repository.py
backend/app/services/: __init__.py  gmail_client.py  hunter_client.py  orchestrator.py  outreach.py  resume_parser.py  sourcing.py
backend/app/services/email_verification/: __init__.py  dns_resolver.py  exceptions.py  models.py  permutations.py  service.py  smtp_prober.py
backend/app/tasks/: __init__.py  sourcing_task.py
backend/app/utils/: __init__.py  formatters.py
backend/examples/: verify_demo.py
backend/migrations/: env.py
backend/migrations/versions/: 2682ca1c3796_initial_schema_jobs_and_master_profile.py  2f488d1e25ad_add_company_website.py  777c6c8d6179_add_recruiter_contact.py  a8b6c7d8e9f0_add_filtered_out_status.py  b3f1a2c4d5e6_add_source_job_id_to_job_postings.py  b9c8d7e6f5a4_add_applied_at.py  c0d9e8f7a6b5_add_discarded_status.py  c1d2e3f4a5b6_add_employee_count.py  d2e3f4a5b6c7_add_company_linkedin_url.py  d5e3f4a5b6c7_add_job_metadata.py  e6f4a5b6c7d8_add_cover_letter_draft.py  f7a5b6c7d8e9_add_tailored_cv_and_match_reason.py
backend/scripts/: init_db.py  reset_db.py  run_pipeline_test.py  seed_profile.py  test_endpoint.py
backend/tests/: conftest.py  test_ai_nodes.py  test_config.py  test_formatters.py  test_job_repository.py  test_jobs_api.py  test_jobs_ws.py  test_models.py  test_outreach_api.py  test_permutations.py  test_profile_repository.py  test_profiles_api.py  test_service.py  test_sourcing.py  test_sourcing_task.py
docs/: AI_Layer_Spec.md  API_Contracts.md  Architecture.md  Branch_Summary_Sourcing.md  Data_Layer_Profile_Spec.md  Data_Layer_Spec.md  Data_Models.md  EXAMPLES_JOB_MATCHING.md  Email_Verification_Spec.md  Frontend_Spec.md  Job_Metadata_Spec.md  Migrations.md  Product_Requirements.md  Realtime_Matching_Spec.md  Sourcing_Spec.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppHeader.tsx
frontend/src/components/ui/: dialog.tsx  table.tsx
frontend/src/contracts/: emailVerification.ts  job.ts  profile.ts
frontend/src/features/cover-letters/ui/: CoverLetterCard.tsx  CoverLettersPage.tsx
frontend/src/features/jobs-board/api/: jobs.service.ts  queryKeys.ts  types.ts
frontend/src/features/jobs-board/hooks/: useDeleteJob.ts  useJobs.ts  useMatchJob.ts  useMatchJobStream.ts  useMatchedJobs.ts  useSendOutreach.ts  useTriggerSourcing.ts
frontend/src/features/jobs-board/lib/: cvToPdf.ts
frontend/src/features/jobs-board/ui/: JobCard.tsx  StreamTerminal.tsx
frontend/src/pages/: ApplicationsPage.tsx  JobsFeedPage.tsx  ProfilePage.tsx
frontend/src/shared/api/: client.ts  errors.ts
infra/: docker-compose.yml
(+7 files in other folders)
